--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ tauri-build = { version = "1.2.1", features = [] }
 
 [dependencies]
 serde_json = "1.0"
+serialport = "4.2.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.4", features = [] }
 
