--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
+    "uuid": "^9.0.0",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.15.0",
+    "@types/uuid": "^9.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/compiler-sfc": "^3.2.47",
     "typescript": "^4.9.3",
